--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -6,16 +6,41 @@
   background-color: #f0f0f0;
 }
 
-.navbar ul {
-  list-style: none;
-  display: flex;
-  gap: 20px;
+.navbar h2 {
+  margin: 0;
+  font-size: 1.5rem;
 }
 
-.navbar ul li {
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  display: inline-block;
+  margin-right: 20px;
   cursor: pointer;
 }
 
-.navbar ul li:hover {
+li:hover {
   text-decoration: underline;
+}
+
+.submenu {
+  position: absolute;
+  background-color: #fff;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: none;
+  margin-bottom: 10px;
+}
+
+li:hover .submenu {
+  display: block;
+}
+
+.submenu li {
+  display: block;
+  margin: 5px 0;
 }
