--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -4,6 +4,7 @@
   align-items: center;
   padding: 10px 20px;
   background-color: #f0f0f0;
+  margin-bottom: 20px;
 }
 
 .navbar h2 {
@@ -23,7 +24,7 @@ li {
   cursor: pointer;
 }
 
-li:hover {
+.navbar:hover {
   text-decoration: underline;
 }
 
