--- a/src/Foot.css
+++ b/src/Foot.css
@@ -1,16 +1,8 @@
-.app-container {
-  display: flex;
-  flex-direction: column;
-}
-
-header {
-  flex-shrink: 0;
-}
-
-main {
-  flex-grow: 1;
-}
-
 footer {
-  flex-shrink: 0;
+  position: fixed;
+  bottom: 0;
+  background-color: none;
+  color: black;
+  text-align: center;
+  padding: 10px 0;
 }
