--- a/src/RecipeCard.css
+++ b/src/RecipeCard.css
@@ -1,18 +1,19 @@
 .recipe-card {
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  margin-bottom: 20px;
-  padding: 20px;
-}
-
-.recipe-icon {
-  display: inline-block;
-  vertical-align: top;
-  margin-right: 20px;
-  transform: scale(2.5);
+  position: relative;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 10px;
 }
 
 .recipe-details {
-  display: inline-block;
-  vertical-align: top;
+  position: relative;
+}
+
+.heart-button {
+  position: absolute;
+  top: -30px;
+  right: 5px;
+  background: none;
+  border: none;
+  cursor: pointer;
 }
